<resources>
    <string name="app_name">A2 Mobile</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="boas_vindas"></string> <!--Boas-Vindas-->

    <string name="menu_home">Menu Inicial</string>
    <string name="menu_gallery">Sobre</string>
    <string name="menu_slideshow">Nossa Missão</string>
    <string name="menu_contato">Contatos</string>
    <string name="menu_alugueis">Histórico de Aluguéis</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_cadastro_cliente">CadastroClienteActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="avancar">Avançar</string>
    <string name="cancelar_retornar">Cancelar e Retornar</string>
    <string name="retornar">Retornar</string>

    <string name="nome_app">GrA2Motors</string>
    <string name="email_app">gra2motors@gmail.com</string>

    <string name="veiculos_basicos">Veículos Simples</string> <!--Veiculos Simples-->
    <string name="veiculo_gol">Gol</string>
    <string name="veiculo_ford_ka">KA</string>

    <string name="veiculos_intermediarios">Veículos Intermediários</string> <!--Veiculos Intermediários-->
    <string name="veiculos_golf">Golf</string>
    <string name="veiculos_fusion">Fusion</string>

    <string name="veiculos_premium">Veículos Premium</string> <!--Veiculos Premium-->
    <string name="veiculo_bmw_i8">i8</string>

    <string name="pagamento_cartao">Cartão Crédito/Débito</string> <!--Formas de Pagamento-->
    <string name="pagamento_pix">Pix</string>
    <string name="pagamento_boleto">Boleto</string>

    <string name="seguro">Incluir Seguro? </string> <!--Seguro-->
    <string name="tempo_aluguel">Tempo de Alugue em dias: </string> <!--Tempo Aluguel-->

    <string name="encerrar">Encerrar Programa</string> <!--Tempo Aluguel-->

    <string name="preco_gol">R$ 90,00</string> <!--Preco Aluguel Carros-->
    <string name="preco_ka">R$ 130,00</string>
    <string name="preco_golf">R$ 562,00</string>
    <string name="preco_fusion">R$ 7000,00</string>
    <string name="preco_bmw">R$ 3500,00</string>
    <string name="carro">Carro</string>
    <string name="r_500_00">R$ 500.00</string>
    <string name="_mock_date">27/06/2023</string>
    <string name="mock_marca">Marca</string>
    <string name="indisponivel">Indisponível</string>


</resources>